force-app/main/default/objects/AcctSeed__Recurring_Account_Payable__c/AcctSeed__Recurring_Account_Payable__c.object-meta.xml
<CustomObject>
    <description>Captures information related to recurring payable records associated with a vendor. A recurring payable is a template for creating payable records on a periodic basis.</description>
    <label>Recurring Payable</label>
    <nameField>
        <label>Recurring Payable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recurring Payables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>