force-app/main/default/objects/AcctSeed__Recurring_Account_Payable__c/fields/AcctSeed__Account_Payable_Frequency__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Account_Payable_Frequency__c</fullName>
    <label>Payable Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>