force-app/main/default/objects/AcctSeed__Recurring_Account_Payable__c/fields/AcctSeed__Annual_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Annual_Amount__c</fullName>
    <formula>IF(Text(AcctSeed__Account_Payable_Frequency__c)=&quot;Monthly&quot;, AcctSeed__Total2__c * 12,
IF(Text(AcctSeed__Account_Payable_Frequency__c)=&quot;Semi-Annual&quot;, AcctSeed__Total2__c * 2,
IF(Text(AcctSeed__Account_Payable_Frequency__c)=&quot;Quarterly&quot;, AcctSeed__Total2__c * 4,
IF(Text(AcctSeed__Account_Payable_Frequency__c)=&quot;Weekly&quot;, AcctSeed__Total2__c * 52,
IF(Text(AcctSeed__Account_Payable_Frequency__c)=&quot;Bi-weekly&quot;, AcctSeed__Total2__c * 26,
AcctSeed__Total2__c )))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated annual amount.</inlineHelpText>
    <label>Annual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>