force-app/main/default/objects/AcctSeed__Recurring_Account_Payable__c/fields/AcctSeed__Contact__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>A Recurring Payable can have either the Account (Vendor), Contact or User (Employee) as the Payee. One object must be chosen.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Recurring Payables</relationshipLabel>
    <relationshipName>Recurring_Payables</relationshipName>
    <type>Lookup</type>
</CustomField>