force-app/main/default/objects/AcctSeed__Recurring_Account_Payable__c/fields/AcctSeed__Ledger__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Ledger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
    <label>Ledger</label>
    <referenceTo>AcctSeed__Ledger__c</referenceTo>
    <relationshipLabel>Recurring Payables</relationshipLabel>
    <relationshipName>Recurring_Payables</relationshipName>
    <type>Lookup</type>
</CustomField>