force-app/main/default/objects/AcctSeed__Recurring_Account_Payable__c/fields/AcctSeed__Next_Payable_Create__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Next_Payable_Create__c</fullName>
    <formula>IF(AcctSeed__Next_Account_Payable_Date__c - TODAY() &lt;=7, &quot;Next 7 Days&quot;, 
IF(AcctSeed__Next_Account_Payable_Date__c - TODAY() &lt;=30, &quot;8 To 30 Days&quot;, 
IF(AcctSeed__Next_Account_Payable_Date__c - TODAY() &lt;=60, &quot;31 To 60 Days&quot;, 
IF(AcctSeed__Next_Account_Payable_Date__c - TODAY() &lt;=90, &quot;61 To 90 Days&quot;, 
&quot;Beyond 90 Days&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time frame to create next payable.</inlineHelpText>
    <label>Next Payable Create</label>
    <type>Text</type>
</CustomField>