force-app/main/default/objects/AcctSeed__Recurring_Account_Payable__c/fields/AcctSeed__Purchase_Tax__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Purchase_Tax__c</fullName>
    <inlineHelpText>Summary of the Recurring Payable Lines&apos; Tax Amount fields</inlineHelpText>
    <label>Purchase Tax</label>
    <summarizedField>AcctSeed__Recurring_Account_Payable_Line__c.AcctSeed__Tax_Amount__c</summarizedField>
    <summaryForeignKey>AcctSeed__Recurring_Account_Payable_Line__c.AcctSeed__Recurring_Account_Payable__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>