force-app/main/default/objects/AcctSeed__Recurring_Account_Payable__c/fields/AcctSeed__Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Sub_Total__c</fullName>
    <formula>AcctSeed__Total2__c - AcctSeed__Purchase_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Summary of all the Recurring Payable Lines&apos; Sub-Total fields</inlineHelpText>
    <label>Sub-Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>