force-app/main/default/objects/AcctSeed__Recurring_Account_Payable__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Vendor__c</columns>
    <columns>AcctSeed__Account_Payable_Frequency__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Last_Account_Payable_Date__c</columns>
    <columns>AcctSeed__Next_Account_Payable_Date__c</columns>
    <columns>AcctSeed__Total__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>