force-app/main/default/objects/AcctSeed__Recurring_Account_Payable__c/listViews/AcctSeed__Create_in_Next_7_Days.listView-meta.xml
<ListView>
    <fullName>AcctSeed__Create_in_Next_7_Days</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Vendor__c</columns>
    <columns>AcctSeed__Account_Payable_Frequency__c</columns>
    <columns>AcctSeed__Next_Account_Payable_Date__c</columns>
    <columns>AcctSeed__Total2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Next_Account_Payable_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:7</value>
    </filters>
    <label>Create in Next 7 Days</label>
    <language>en_US</language>
</ListView>